[style]- adjust background image component

--- a/weather-app/src/components/BackgroundImage/BackgroundImage.css
+++ b/weather-app/src/components/BackgroundImage/BackgroundImage.css
@@ -1,8 +1,11 @@
 .backgroundImageComponent {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    z-index: -1;
 }
 
 .backgroundImageComponent img {
