[style]- upate app style

--- a/weather-app/src/components/BackgroundImage/BackgroundImage.css
+++ b/weather-app/src/components/BackgroundImage/BackgroundImage.css
@@ -1,4 +1,4 @@
-.backgroundImageComponent {
+.background-container {
     position: fixed;
     top: 0;
     left: 0;
@@ -8,7 +8,7 @@
     z-index: -1;
 }
 
-.backgroundImageComponent img {
+.background-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
