--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'MeteoconsRegular';
+  src: url('./assets/meteocons-font/FONT/Font-face/meteocons-webfont.eot');
+  src: url('./assets/meteocons-font/FONT/Font-face/meteocons-webfont.eot?#iefix') format('embedded-opentype'),
+       url('./assets/meteocons-font/FONT/Font-face/meteocons-webfont.woff') format('woff'),
+       url('./assets/meteocons-font/FONT/Font-face/meteocons-webfont.ttf') format('truetype'),
+       url('./assets/meteocons-font/FONT/Font-face/meteocons-webfont.svg#MeteoconsRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
