--- a/weather-app/src/components/CurrentWeather/CurrentWeather.css
+++ b/weather-app/src/components/CurrentWeather/CurrentWeather.css
@@ -1,6 +1,4 @@
 .current-weather-container {
-    padding: 15px;
-    min-width: 400px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -8,19 +6,19 @@
     align-items: center;
     height: 60vh;
     text-align: left;
+    flex-direction: column;
 }
 
 .image,
 .weather-data {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     flex: 1 1 50%;
     box-sizing: border-box;
     width: 100%;
     height: 50%;
     padding: 10px;
-    height: auto;
     color: #FFFFFF;
 }
 .image {
@@ -33,31 +31,36 @@
 }
 
 .current-weather-container .image .icon {
-    font-size: 15em;
+    font-size: 10em;
     color: #FFFFFF;
     margin: 0 5px;
     border-bottom: 1px solid transparent;
 }
 
 .current-weather-container p {
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 10px 0;
     margin: 0px;
+    font-weight: bold;
 }
 .current-weather-container span {
-    font-size: 1.8em;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 @media (min-width: 801px) {
     .current-weather-container {
         flex-direction: row;
         max-width: 50vw;
+        min-width: 400px;
+        padding: 15px;
     }
 
     .image,
     .weather-data {
         width: 50%;
         height: auto;
+        align-items: flex-start;
     }
 
     .current-weather-container .image .icon {
